src/test/ui/borrowck/borrowck-in-static.stderr
error[E0507]: cannot move out of captured outer variable in an `Fn` closure
  --> $DIR/borrowck-in-static.rs:15:17
   |
14 |     let x = Box::new(0);
   |         - captured outer variable
15 |     Box::new(|| x) //~ ERROR cannot move out of captured outer variable
   |                 ^ cannot move out of captured outer variable in an `Fn` closure

error: aborting due to previous error

